Working on PUT route

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -53,6 +53,7 @@
       </div>
       <div class="columns">
         <div class="column is-half is-offset-one-quarter">
+          <span id="count">asf</span>
       <span id="businesses"></span>
     </div>
   </div>
