Added small margin between cards

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -94,7 +94,7 @@
               let city = titleCaseCity(biz.city);
 
               $('#businesses').append(`
-                <div class="card">
+                <div class="card" style="margin-bottom: 10px;">
                 <div class="card-content">
                 <p class="title">${biz.name}  </p>
                 <p class="subtitle">Rating: ${biz.rating} </p>
@@ -131,7 +131,7 @@
               let city = titleCaseCity(biz.city);
 
               $('#businesses').append(`
-                <div class="card">
+                <div class="card" style="margin-bottom: 10px;">
                 <div class="card-content">
                 <p class="title">${biz.name}  </p>
                 <p class="subtitle">Rating: ${biz.rating} </p>
